--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/client/node_modules
+/server/node_modules
 /node_modules
 /.pnp
 .pnp.js
@@ -14,9 +16,11 @@
 # misc
 .DS_Store
 .env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
+/server/.env
 
 npm-debug.log*
 yarn-debug.log*
